# Utility-Network-Schema-QA-Copilot

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-16-foundation-core-implementation.md
docs/superpowers/specs/: 2026-07-16-utility-network-schema-qa-copilot-design.md
src/un_schema_qa/: __init__.py
src/un_schema_qa/engine/: __init__.py  protocols.py  registry.py  runner.py
src/un_schema_qa/models/: __init__.py  common.py  domains.py  enums.py  json_values.py  mappings.py  profiles.py  project.py  results.py  schema.py
src/un_schema_qa/parsers/: __init__.py  base.py  csv_parser.py  excel_parser.py  json_parser.py  registry.py  yaml_parser.py
tests/: test_package.py
tests/engine/: test_protocols.py  test_registry.py  test_runner.py
tests/models/: test_common.py  test_domains.py  test_enums.py  test_mappings.py  test_profiles.py  test_project.py  test_results.py  test_schema.py
tests/parsers/: test_base.py  test_csv_parser.py  test_excel_parser.py  test_json_parser.py  test_registry.py  test_yaml_parser.py
tests/typecheck/: immutable_json_contract.py
